--- a/app/plantillas/css/contrasena.css
+++ b/app/plantillas/css/contrasena.css
@@ -9,5 +9,15 @@ Page {
   width: 50%;
 }
 .pass{
-  width: 50%;
+    width: 20%;
+    margin-top: 40;
+    margin-left: 20;
+    margin-right: 20;
+    margin-bottom: 40;  
 }
+  .info{
+    margin-top: 40;
+    margin-bottom: 50;
+    font: caption bold;
+
+  }
