--- a/app/plantillas/css/cambiocontrasena.css
+++ b/app/plantillas/css/cambiocontrasena.css
@@ -8,8 +8,8 @@ Page {
   margin-top: 20;
   width: 50%;
 }
-.look{
-    width: 30%;
+.pass{
+    width: 20%;
     margin-top: 40;
     margin-left: 20;
     margin-right: 20;
