--- a/app/plantillas/css/menu.css
+++ b/app/plantillas/css/menu.css
@@ -26,4 +26,10 @@
     margin-bottom: 30;
     width: 15%;
 }
+.submit-button {
+  background-color: #E73C3E ;
+  color:white;
+  margin-top: 20;
+  width: 50%;
+}
 
