--- a/app/vistas/css/actdir.css
+++ b/app/vistas/css/actdir.css
@@ -5,25 +5,19 @@
     width: 7%;
     align-items: left;
 }
-
-.inf{
-    margin-top: 50;
-    margin-left: 70;
-    margin-right: 70;
-    margin-bottom: 30;
-    font: caption bold;
-    font-size: 25;
-    width: 80%;
-
-}
 .info1{
-    margin-top: 50;
-    margin-left: 70;
-    margin-right: 70;
-    margin-bottom: 30;
+    margin-top: 15;
+    margin-bottom: 20;
     font: caption bold;
-    font-size: 20;
     width: 80%;
+}
+.inf{
+    margin-top: 15;
+    margin-bottom: 20;
+    font: caption bold;
+    width: 100%;
+    align-items: center;
+
 }
 .img{
     margin-top: 30;
@@ -31,7 +25,7 @@
     margin-right: 30;
     margin-bottom: 30;
     width: 15%;
-    height: 10%;
+    align-items: left;
 }
 .submit-button {
   background-color: #E73C3E ;
@@ -39,4 +33,3 @@
   margin-top: 20;
   width: 50%;
 }
-
