--- a/app/vistas/css/actualizaDatos.css
+++ b/app/vistas/css/actualizaDatos.css
@@ -1,11 +1,12 @@
+/*Estilos de la vista*/
 .info1{
-    margin-top: 30;
+    margin-top: 20;
     margin-left: 70;
     margin-right: 70;
-    margin-bottom: 30;
+    margin-bottom: 20;
     font: caption bold;
     font-size: 20;
-    width: 80%;
+    width: 65%;
 }
 TextField {
   margin:    5;
