--- a/app/vistas/css/eleccion.css
+++ b/app/vistas/css/eleccion.css
@@ -5,35 +5,35 @@
     width: 7%;
     align-items: left;
 }
-.info1{
-    margin-top: 15;
-    margin-bottom: 20;
-    font: caption bold;
-    width: 80%;
-}
+
 .inf{
-    margin-top: 15;
-    margin-bottom: 20;
+    
+    margin-top: 50;
+    margin-left: 70;
+    margin-right: 70;
+    margin-bottom: 50;
     font: caption bold;
+    font-size: 25;
     width: 80%;
-    align-items: center;
 
 }
-.info{
-    margin-top: 40;
-    margin-bottom: 20;
-    margin-left: 10%;
-    margin-right: 30;
+.info1{
+    margin-top: 50;
+    margin-left: 70;
+    margin-right: 70;
+    margin-bottom: 30;
     font: caption bold;
     font-size: 20;
+    width: 80%;
 }
 .img{
+    margin: 30;
     margin-top: 30;
-    margin-left: 20;
-    margin-right: 20;
+    margin-left: 80;
+    margin-right: 10;
     margin-bottom: 30;
     width: 15%;
-    align-items: left;
+    height: 15%;
 }
 .submit-button {
   background-color: #E73C3E ;
