--- a/app/vistas/css/detprod.css
+++ b/app/vistas/css/detprod.css
@@ -1,3 +1,14 @@
 .genero{
-    width: 20%;
+    width: 40%;
   }
+
+  .submit-button {
+  background-color: #E73C3E ;
+  color:white;
+  margin-top: 20;
+  width: 50%;
+}
+.c1{
+    margin-top: 10;
+    margin-bottom: 10;
+}
