--- a/app/vistas/css/tarjeta.css
+++ b/app/vistas/css/tarjeta.css
@@ -1,11 +1,29 @@
 
 .img {
-        width: 10%;
-        margin-left: 0;
-        margin-right: 300;
-        margin-top: -40;
+        width: 30%;
+        margin-left: 10;
+        margin-right: 0;
+        margin-top: 0;
         margin-bottom: 10;
     }
+    .info{
+    margin-top: 30;
+    margin-bottom: 0;
+    font: caption bold;
+    font-size: 20;
+    width: 80%;
+    margin-left: 70;
+}
+
+
+    .info1{
+    margin-top: 30;
+    margin-bottom: 10;
+    margin-left: 10;
+    font: caption bold;
+    font-size: 20;
+    width: 80%;
+}
     
     .back{
         margin: 2;
@@ -15,7 +33,7 @@
     }
 
     .clase{
-        margin-left: 50;
+        margin-left: 60;
         margin-right: 50;
         margin-top: 10;
         margin-bottom: 10;
@@ -26,10 +44,18 @@
         margin-top: 10;
         margin-bottom: 10;
     }
-    .botoncito{
-        background-color: #9FCB00;
-        color: white;
-        margin-top: 100;
-        margin-bottom: 0;
+       .submit-button {
+  background-color: #E73C3E ;
+  color:white;
+  margin-top: 60;
+  width: 70%;
+}
 
-    }
+.info2{
+ 
+    font: caption bold;
+    font-size: 20;
+    width: 80%;
+    color: #E73C3E ;
+    text-align: center;
+}
